# qt5GstreamerExample

./: CMakeLists.txt  README.md  main.cpp
